Reenabled TestFetchFile unit tests on on Windows